--- a/.config/i3/Canvas-Polybar-theme/compton-i3.conf
+++ b/.config/i3/Canvas-Polybar-theme/compton-i3.conf
@@ -74,17 +74,15 @@ active-opacity = 1;
 blur-kern = "3x3box";
 opacity-rule = [ ];
 blur-background-exclude = [ ];
- 
- 
+
 ## Fading
-#fading = true;
-#fade-delta = 5;
-#fade-in-step = 0.03;
-#fade-out-step = 0.03;
-## no-fading-openclose = true;
-#fade-exclude = [ ];
- 
- 
+fading = true;
+fade-delta = 7;
+fade-in-step = 0.03;
+fade-out-step = 0.028;
+# no-fading-openclose = true;
+fade-exclude = [ ];
+
 ## Window type settings
 wintypes:
 {
