--- a/.config/i3/Canvas-theme/compton-i3.conf
+++ b/.config/i3/Canvas-theme/compton-i3.conf
@@ -88,7 +88,7 @@ blur-background-exclude = [ ];
 ## Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.85; focus = true; };
+  tooltip = { fade = true; shadow = false; opacity = 0.85; focus = true; };
   menu = { shadow = false; };
   dropdown_menu = { shadow = true; };
   popup_menu =  { shadow = true; };
