--- a/.config/i3/Canvas-Polybar-Envypn-theme/compton-i3.conf
+++ b/.config/i3/Canvas-Polybar-Envypn-theme/compton-i3.conf
@@ -32,9 +32,9 @@ no-dock-shadow = false;
 clear-shadow = true;
 shadow-ignore-shaped = true;
 detect-rounded-corners = true;
-shadow-radius = 6;
-shadow-offset-x = -9;
-shadow-offset-y = -9;
+shadow-radius = 8;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
 shadow-opacity = 0.40;
 # xinerama-shadow-crop = true;
 # shadow-exclude-reg = "x10+0+0";
@@ -74,16 +74,14 @@ active-opacity = 1;
 blur-kern = "3x3box";
 opacity-rule = [ ];
 blur-background-exclude = [ ];
- 
- 
+
 ## Fading
-#fading = true;
-#fade-delta = 5;
-#fade-in-step = 0.03;
-#fade-out-step = 0.03;
-## no-fading-openclose = true;
-#fade-exclude = [ ];
- 
+fading = true;
+fade-delta = 3;
+fade-in-step = 0.03;
+fade-out-step = 0.028;
+# no-fading-openclose = true;
+fade-exclude = [ ]; 
  
 ## Window type settings
 wintypes:
