--- a/.config/i3/Canvas-Polybar-Envypn-theme/polybar/config
+++ b/.config/i3/Canvas-Polybar-Envypn-theme/polybar/config
@@ -33,7 +33,7 @@ bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-overline-size = 1
+overline-size = 2
 overline-color = #f00
 underline-size = 1
 underline-color = #00f
@@ -61,13 +61,14 @@ module-margin-right = 1
 separator = %{F#535353}%{F-}
 ;separator = %{F#535353}|%{F-}
 
-;font-0 = Iosevka:pixelsize=10;2
+;font-0 = Iosevka:pixelsize=10;3
 ;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ;font-2 = siji:pixelsize=9;1
-;font-3 = FontAwesome:pixelsize=10;2
+;font-3 = FontAwesome:pixelsize=9;2
 ;font-4 = Monaco:pixelsize=9;2
 ;font-5 = Roboto:pixelsize=9;2
 
+;;font-0 = Misc Tamsyn:pixelsize=15;2
 font-0 = ypn envypn:pixelsize=9;2
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=8.5;1
@@ -81,9 +82,9 @@ font-5 = Roboto:pixelsize=9;2
 ;font-3 = FontAwesome:pixelsize=9;2
 ;font-4 = ypn envypn:pixelsize=9;2
 
-modules-left = rofi i3
+modules-left = rofi i3 bspwm
 modules-center = mpd
-modules-right = system-uptime-pretty updates-arch gmail home filesystem memory temperature cpu pulseaudio eth xkeyboard date reload powermenu
+modules-right = system-uptime-pretty background updates-arch gmail home filesystem memory temperature cpu pulseaudio eth xkeyboard date reload powermenu
 
 tray-position = right
 ;tray-detached = true
@@ -91,8 +92,8 @@ tray-position = right
 ;tray-transparent = true
 tray-background = #1B1B1B
 
-;wm-restack = bspwm
-wm-restack = i3
+wm-restack = bspwm
+;wm-restack = i3
 
 ;override-redirect = true
 
@@ -108,6 +109,44 @@ cursor-scroll = ns-resize
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
+
+[module/bspwm]
+type = internal/bspwm
+
+# format = <label-state> <label-mode>
+# label-monitor = %name%
+
+# ws-icon-0 = 1;
+# ws-icon-1 = 2;
+# ws-icon-2 = 3;
+# ws-icon-3 = 4;
+# ws-icon-4 = 5;
+# ws-icon-5 = 6;
+# ws-icon-6 = 7;
+# ws-icon-7 = 8;
+# ws-icon-8 = 9;
+# ws-icon-9 = 10;
+# ;ws-icon-default = 
+
+label-focused = 
+label-focused-background = ${colors.background-alt}
+;label-focused-underline = #5072F8
+label-focused-overline = #5072F8
+label-focused-padding = 1
+
+label-occupied = 
+label-occupied-overline = #313131
+label-occupied-padding = 1
+
+label-urgent = 
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+label-empty = 
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 1
+
+fuzzy-match = true
 
 [module/i3]
 type = internal/i3
@@ -260,6 +299,15 @@ bar-progress-fill-font = 3
 bar-progress-empty-font = 3
 bar-progress-empty-foreground = ${colors.foreground-alt}
 
+[module/background]
+type = custom/script
+;label-padding = 2
+label-foreground = #FFFFFF
+;label-background = #5072F8
+interval = 120
+exec = echo ""
+click-left = "feh --randomize --bg-fill ~/Pictures/backgrounds/* &"
+
 [module/reload]
 type = custom/script
 ;label-padding = 2
@@ -271,7 +319,7 @@ click-left = "cp ~/.config/i3/Canvas-Polybar-Envypn-theme/polybar/config ~/.conf
 
 [module/system-uptime-pretty]
 type = custom/script
-exec = ~/.config/i3/Canvas-Polybar-theme/polybar/scripts/system-uptime-pretty.sh
+exec = sh ~/.config/i3/Canvas-Polybar-theme/polybar/scripts/system-uptime-pretty.sh
 interval = 30
 
 [module/uptime]
@@ -283,16 +331,16 @@ interval = 5
 [module/updates-arch]
 type = custom/script
 label-foreground = #E3E3E3
-exec = ~/.scripts/updates-arch-combined.sh
+exec = sh ~/.scripts/updates-arch-combined.sh
 interval = 60
-click-left = urxvt -e bash -c 'sudo pacman -Syu; echo Done - press enter to exit; read'
+click-left = sh ~/.scripts/updates-install.sh &
 
 [module/gmail]
 type = custom/script
 label = %{F#88A0FF} %output%%{F-}
 interval = 30
 exec = ~/.scripts/gmail.py
-click-left = thunderbird &
+click-left = firefox --new-window https://mail.google.com/mail/u/1/#inbox &
 
 [module/home]
 type = internal/fs
@@ -341,7 +389,7 @@ interval = 2
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-overline = #4bffdc
 format = <label> <bar-used>
-label = %{F#E3E3E3}RAM %percentage_used%%%{F-}
+label = %{F#E3E3E3}RAM %percentage_used:2%%%{F-}
 
 bar-used-width = 10
 bar-used-foreground-0 = #869FFF
@@ -355,7 +403,7 @@ bar-used-empty = |
 bar-used-empty-font = 3
 bar-used-empty-foreground = #444444
 bar-used-gradient = false
-bar-used-indicator = 
+bar-used-indicator =
 bar-used-indicator-font = 3
 
 [module/eth]
@@ -363,10 +411,11 @@ type = internal/network
 interface = enp2s0
 exec = check-network
 interval = 2.0
-udspeed-minwidth = 0
+;udspeed-minwidth = 0
 
 format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3} %{F#89A8EE}%local_ip% (%downspeed:8%)%{F-}%{A}
+label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3} %{F#89A8EE}(%downspeed:8%)%{F-}%{A}
+;label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3} %{F#89A8EE}%local_ip% (%downspeed:8%)%{F-}%{A}
 
 format-disconnected = <label-disconnected>
 label-disconnected = %{A1:networkmanager_dmenu:}%{F#797979}ip: ?%{F-}%{A}
@@ -384,8 +433,8 @@ format = <ramp><label>
 format-warn = <ramp> <label-warn>
 ;format-warn-overline = ${self.format-underline}
 
-label = %{F#E3E3E3} %temperature%%{F-}
-label-warn = %temperature%
+label = %{F#E3E3E3} %temperature-c%%{F-}
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
@@ -465,7 +514,7 @@ bar-volume-foreground-6 = #FFA500
 bar-volume-foreground-7 = #FFA500
 bar-volume-foreground-8 = #FF0000
 bar-volume-gradient = true
-bar-volume-indicator = 
+bar-volume-indicator =
 bar-volume-indicator-font = 3
 bar-volume-fill = |
 bar-volume-fill-font = 3
@@ -556,7 +605,7 @@ label-foreground = #FF83DF
 ;label-background = #3555D0
 interval = 120
 exec = echo ""
-click-left = "sh ~/.scripts/power-menu.sh"
+click-left = sh ~/.scripts/power-menu.sh &
 
 [settings]
 screenchange-reload = true
