--- a/.config/i3/Canvas-Polybar-theme/polybar/config
+++ b/.config/i3/Canvas-Polybar-theme/polybar/config
@@ -33,7 +33,7 @@ bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-overline-size = 1
+overline-size = 2
 overline-color = #f00
 underline-size = 1
 underline-color = #00f
@@ -42,7 +42,7 @@ border-top-size = 0
 border-top-color = #FFA500
 ;border-top-color = #009BAE
 
-border-bottom-size = 2
+border-bottom-size = 0
 border-bottom-color = #5072F8
 
 border-left-size = 0
@@ -52,23 +52,40 @@ border-right-size = 0
 border-right-color = #FFA500
 
 padding-left = 0
-padding-right = 4
+padding-right = 1
 
-module-margin-left = 3
-module-margin-right = 3
+module-margin-left = 1
+module-margin-right = 1
 
 ; The separator will be inserted between the output of each module
 separator = %{F#535353}%{F-}
+;separator = %{F#535353}|%{F-}
 
-font-0 = Roboto:pixelsize=9;2
+font-0 = Iosevka:pixelsize=10;3
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=9;1
 font-3 = FontAwesome:pixelsize=9;2
 font-4 = Monaco:pixelsize=9;2
+font-5 = Roboto:pixelsize=9;2
 
-modules-left = rofi i3
+
+;;font-0 = Misc Tamsyn:pixelsize=14;2
+;font-0 = ypn envypn:pixelsize=9;2
+;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+;font-2 = siji:pixelsize=8.5;1
+;font-3 = FontAwesome:pixelsize=8.5;3
+;font-4 = Monaco:pixelsize=9;2
+;font-5 = Roboto:pixelsize=9;2
+
+;font-0 = Roboto:pixelsize=9;2
+;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+;font-2 = siji:pixelsize=9;1
+;font-3 = FontAwesome:pixelsize=9;2
+;font-4 = ypn envypn:pixelsize=9;2
+
+modules-left = rofi i3 bspwm
 modules-center = mpd
-modules-right = system-uptime-pretty updates-arch gmail home filesystem memory temperature cpu pulseaudio network xkeyboard date reload powermenu
+modules-right = system-uptime-pretty background updates-arch gmail home filesystem memory temperature cpu pulseaudio eth xkeyboard date reload powermenu
 
 tray-position = right
 ;tray-detached = true
@@ -76,8 +93,8 @@ tray-position = right
 ;tray-transparent = true
 tray-background = #1B1B1B
 
-;wm-restack = bspwm
-wm-restack = i3
+wm-restack = bspwm
+;wm-restack = i3
 
 ;override-redirect = true
 
@@ -93,6 +110,44 @@ cursor-scroll = ns-resize
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
+
+[module/bspwm]
+type = internal/bspwm
+
+# format = <label-state> <label-mode>
+# label-monitor = %name%
+
+# ws-icon-0 = 1;
+# ws-icon-1 = 2;
+# ws-icon-2 = 3;
+# ws-icon-3 = 4;
+# ws-icon-4 = 5;
+# ws-icon-5 = 6;
+# ws-icon-6 = 7;
+# ws-icon-7 = 8;
+# ws-icon-8 = 9;
+# ws-icon-9 = 10;
+# ;ws-icon-default = 
+
+label-focused = 
+label-focused-background = ${colors.background-alt}
+;label-focused-underline = #5072F8
+label-focused-overline = #5072F8
+label-focused-padding = 1
+
+label-occupied = 
+label-occupied-overline = #313131
+label-occupied-padding = 1
+
+label-urgent = 
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+label-empty = 
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 1
+
+fuzzy-match = true
 
 [module/i3]
 type = internal/i3
@@ -123,7 +178,8 @@ ws-icon-8 = 9;
 
 label-dimmed-underline = ${root.background}
 
-label-mode-padding = 3
+label-mode-padding = 2
+label-mode-font = 6
 label-mode-foreground = #202020
 label-mode-background = #ffb52a
 ;label-mode-overline = #FFA500
@@ -135,7 +191,7 @@ label-focused-background = #5072F8
 ;label-focused-overline = #0CC8E0
 ;label-focused-underline = #0CC8E0
 label-focused-font = 0
-label-focused-padding = 3
+label-focused-padding = 1
 
 label-unfocused = %name%
 ;label-unfocused-foreground = #f3f3f3
@@ -143,7 +199,7 @@ label-unfocused-background = #2B3539
 ;label-unfocused-overline = #3f3f3f
 ;label-unfocused-underline = #3f3f3f
 label-unfocused-font = 0
-label-unfocused-padding = 3
+label-unfocused-padding = 1
 
 label-urgent = %name%
 label-urgent-foreground = #3B3B3B
@@ -151,12 +207,12 @@ label-urgent-background = #ffb52a
 label-urgent-overline = #ffb52a
 ;label-urgent-underline = #FFB52A
 label-urgent-font = 0
-label-urgent-padding = 3
+label-urgent-padding = 1
 
 label-visible = %name%
 label-visible-foreground = #55ffffff
 label-visible-font = 0
-label-visible-padding = 3
+label-visible-padding = 1
 
 [module/rofi]
 type = custom/script
@@ -164,8 +220,8 @@ label-padding = 2
 label-foreground = #FFFFFF
 label-background = #5072F8
 interval = 120
-exec = echo "    "
-click-left = "rofi -show drun >/dev/null 2>&1 &"
+exec = echo ""
+click-left = "rofi -show drun -show-icons -drun-icon-theme Newaita-holidays-dark >/dev/null 2>&1 &"
 
 [module/jgmenu]
 type = custom/script
@@ -188,7 +244,7 @@ port = 6600
 
 interval = 1
 
-format-online = %{F#778688}<label-time>%{F-}   <bar-progress>   %{F#778688}<label-song>%{F-}
+format-online = %{F#778688}<label-time>%{F-} <bar-progress> %{F#778688}<label-song>%{F-}
 ;format-online = %{F#778688}<icon-stop>    <toggle>    <icon-prev>    <icon-next>   %{F-}<bar-progress>   %{F#778688}<label-time>   [ <label-song> ]%{F-}
 
 ; Available tags:
@@ -234,7 +290,7 @@ toggle-on-foreground = #ff
 toggle-off-foreground = #55
 
 ; Only applies if <bar-progress> is used
-bar-progress-width = 30
+bar-progress-width = 20
 bar-progress-indicator = %{F#505050}%{F-}
 bar-progress-fill = %{F#527ACC}|%{F-}
 bar-progress-empty = %{F#505050}|%{F-}
@@ -243,6 +299,15 @@ bar-progress-indicator-font = 3
 bar-progress-fill-font = 3
 bar-progress-empty-font = 3
 bar-progress-empty-foreground = ${colors.foreground-alt}
+
+[module/background]
+type = custom/script
+;label-padding = 2
+label-foreground = #FFFFFF
+;label-background = #5072F8
+interval = 120
+exec = echo ""
+click-left = "feh --randomize --bg-fill ~/Pictures/backgrounds/* &"
 
 [module/reload]
 type = custom/script
@@ -255,7 +320,7 @@ click-left = "cp ~/.config/i3/Canvas-Polybar-theme/polybar/config ~/.config/poly
 
 [module/system-uptime-pretty]
 type = custom/script
-exec = ~/.config/i3/Canvas-Polybar-theme/polybar/scripts/system-uptime-pretty.sh
+exec = sh ~/.config/i3/Canvas-Polybar-theme/polybar/scripts/system-uptime-pretty.sh
 interval = 30
 
 [module/uptime]
@@ -267,13 +332,13 @@ interval = 5
 [module/updates-arch]
 type = custom/script
 label-foreground = #E3E3E3
-exec = ~/.scripts/updates-arch-combined.sh
+exec = sh ~/.scripts/updates-arch-combined.sh
 interval = 60
-click-left = urxvt -e bash -c 'sudo pacman -Syu; echo Done - press enter to exit; read'
+click-left = sh ~/.scripts/updates-install.sh &
 
 [module/gmail]
 type = custom/script
-label = %{F#88A0FF}  %output%%{F-}
+label = %{F#88A0FF} %output%%{F-}
 interval = 30
 exec = ~/.scripts/gmail.py
 click-left = thunderbird &
@@ -294,7 +359,7 @@ mount-0 = /home
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %{F#E3E3E3}  %percentage_used%%%{F-}
+label-mounted = %{F#E3E3E3} %percentage_used%%%{F-}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -314,18 +379,18 @@ mount-0 = /
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %{F#FF83DF}  %percentage_used%%%{F-}
+label-mounted = %{F#FF83DF} %percentage_used%%%{F-}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+;format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-overline = #4bffdc
 format = <label> <bar-used>
-label = %{F#E3E3E3}RAM %percentage_used%%%{F-}
+label = %{F#E3E3E3}RAM %percentage_used:2%%%{F-}
 
 bar-used-width = 10
 bar-used-foreground-0 = #869FFF
@@ -339,24 +404,21 @@ bar-used-empty = |
 bar-used-empty-font = 3
 bar-used-empty-foreground = #444444
 bar-used-gradient = false
-bar-used-indicator = 
+bar-used-indicator =
 bar-used-indicator-font = 3
 
 [module/eth]
 type = internal/network
 interface = enp2s0
-interval = 2
+exec = check-network
+interval = 2.0
+;udspeed-minwidth = 0
 
-;format-connected-overline = #55aa55
-format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %{F#7495E1}ip:  %local_ip% (%downspeed%)%{F-}
+label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3} %{F#89A8EE}%local_ip% (%downspeed:8%)%{F-}%{A}
 
-;format-disconnected = ∅ disconnected
 format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = %{F#797979}ip: ?%{F-}
-;label-disconnected-foreground = ${colors.foreground-alt}
+label-disconnected = %{A1:networkmanager_dmenu:}%{F#797979}ip: ?%{F-}%{A}
 
 [module/temperature]
 type = internal/temperature
@@ -366,13 +428,13 @@ warn-temperature = 60
 
 hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input
 
-format = <ramp> <label>
+format = <ramp><label>
 ;format-overline = #f50a4d
 format-warn = <ramp> <label-warn>
 ;format-warn-overline = ${self.format-underline}
 
-label = %{F#E3E3E3}  %temperature%%{F-}
-label-warn = %temperature%
+label = %{F#E3E3E3} %temperature-c%%{F-}
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
@@ -398,7 +460,7 @@ format = <label>
 ;   %percentage% (default) - total cpu load
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = %{F#E3E3E3}CPU %percentage:3:3%%%{F-}
+label = %{F#E3E3E3}CPU %percentage:2%%%{F-}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -429,7 +491,7 @@ format-volume = %{F#E3E3E3}<ramp-volume> <label-volume> <bar-volume>%{F-}
 
 ; Available tokens:
 ;   %percentage% (default)
-;label-volume = %percentage%%
+label-volume = %percentage:2%%
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -452,7 +514,7 @@ bar-volume-foreground-6 = #FFA500
 bar-volume-foreground-7 = #FFA500
 bar-volume-foreground-8 = #FF0000
 bar-volume-gradient = true
-bar-volume-indicator = 
+bar-volume-indicator =
 bar-volume-indicator-font = 3
 bar-volume-fill = |
 bar-volume-fill-font = 3
@@ -465,22 +527,22 @@ type = internal/date
 interval = 1
 
 date =
-date-alt = " %Y-%m-%d  "
+date-alt = " %Y-%m-%d  "
 
-time =   %H:%M
+time =  %H:%M
 time-alt = %H:%M
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-overline = #0a6cf5
 
-label = %{F#FFFFFF}%date% %time%%{F-}
+label = %{F#FFFFFF}%date%%time%%{F-}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+;format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-prefix-overline = ${colors.secondary}
 
@@ -504,8 +566,9 @@ label-indicator-background = ${colors.secondary}
 type = internal/network
 interface = enp2s0
 exec = check-network
+interval = 2
 ;label-padding = 1
-;tail = true
+tail = true
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -526,23 +589,23 @@ format-disconnected = <label-disconnected>
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3}   %{F#849CF8} %{F#E3E3E3}%upspeed:6:6%   %{F#849CF8} %{F#E3E3E3}%downspeed:6:6%%{A}
+label-connected = %{A1:networkmanager_dmenu:}%{F#E3E3E3}  %{F#E3E3E3}%downspeed:8% %{F#849CF8}%{A}
 label-connected-foreground = #eefafafa
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = %{A1:networkmanager_dmenu:}%ifname% not connected%{A}
+label-disconnected = %{A1:networkmanager_dmenu:}not connected%{A}
 label-disconnected-foreground = #66ffffff
 
 [module/powermenu]
 type = custom/script
-label-padding = 4
+label-padding = 2
 label-foreground = #FF83DF
 ;label-background = #3555D0
 interval = 120
 exec = echo ""
-click-left = "sh ~/.scripts/power-menu.sh"
+click-left = sh ~/.scripts/power-menu.sh &
 
 [settings]
 screenchange-reload = true
