--- a/.config/i3/Canvas-theme/config
+++ b/.config/i3/Canvas-theme/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Roboto bold 9
+#font pango:xos4 Terminus 8.5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -49,7 +49,8 @@ bindsym $mod+y border pixel 1
 #bindsym $mod+n border normal
 
 ## class                 border  backgr. text    indicator child_border
-client.focused          #8DA4FF #5D7DFB #ffffff #74A5FF   #5D7DFB
+client.focused          #6F88EC #4A68D8 #ffffff #74A5FF   #4A68D8
+#client.focused          #8DA4FF #5D7DFB #ffffff #74A5FF   #5D7DFB
 client.focused_inactive #717171 #505050 #888888 #505050   #505050
 client.unfocused        #717171 #505050 #888888 #505050   #505050
 client.urgent           #FFD380 #ffb52a #ffffff #ffb52a   #ffb52a
@@ -143,7 +144,7 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 #bindsym $mod+Shift+space floating toggle
 #bindsym $mod+s floating toggle
-bindsym $mod+s floating toggle resize set 1200 800;move position center
+bindsym $mod+s floating toggle resize set 1200 800; move position center
 
 # Toggle between dock mode and hide mode
 bindsym $mod+h bar mode toggle
@@ -233,12 +234,13 @@ for_window [class="SuperTuxKart"] floating disable border pixel 2
 #for_window [class="OpenArena"] floating enable border pixel 2
 for_window [class="Imagewriter"] floating enable border normal
 for_window [class="vlc"] floating enable border normal 2
-#for_window [class="smplayer"] floating enable; move position center border pixel 2
+for_window [class="smplayer"] floating enable;move position center border pixel 2
 for_window [class="SimpleScreenRecorder"] floating enable border normal 2
 for_window [class="Transmission-gtk"] floating disable border pixel 2
 for_window [class="Viewnior"] floating enable border normal 2
 for_window [class="Ristretto"] floating enable border normal 2
 for_window [class="Gpicview"] floating enable border normal 2
+for_window [class="Gpick"] floating enable border normal 2
 for_window [class="feh"] floating enable border normal 2
 #for_window [class="Gedit"] floating enable border normal 2
 for_window [class="GParted"] floating enable border normal 2
@@ -328,15 +330,15 @@ bar {
         urgent_workspace   #ffb52a #ffb52a #192328
     }
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
-#        i3bar_command i3bar
-        position top
+        i3bar_command i3bar
+        position bottom
 #        separator_symbol "//"
         workspace_buttons yes
 #        mode hide
 #        hidden_state show
 #        modifier $mod
 #        status_command i3status
-#        status_command i3pystatus -c ~/.config/i3/i3pystatus.py
+        status_command i3pystatus -c ~/.config/i3/i3pystatus.py
 #        status_command i3status-rs ~/.config/i3/status.toml
         font xft:Roboto, FontAwesome 9
 }
@@ -371,7 +373,7 @@ exec --no-startup-id xset -dpms s off
 #############################
 
 # Set inner/outer gaps
-gaps inner 10
+gaps inner 15
 gaps outer 0
 
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
