--- a/.config/i3/Canvas-Polybar-Titlebar-theme/config
+++ b/.config/i3/Canvas-Polybar-Titlebar-theme/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:Noto Sans bold 8
+#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 #font pango:xos4 Terminus 9
 font pango: misc fixed bold 10
 
@@ -229,11 +229,11 @@ for_window [class="Galculator"] floating enable border normal 2
 for_window [class="SuperTuxKart"] floating disable border normal 2
 #for_window [class="OpenArena"] floating enable border pixel 2
 for_window [class="Imagewriter"] floating enable border normal
-for_window [class="vlc"] floating enable border normal 2
+#for_window [class="vlc"] floating enable border normal 2
 #for_window [class="smplayer"] floating enable; move position center border normal 2
 for_window [class="SimpleScreenRecorder"] floating enable border normal 2
-for_window [class="Transmission-gtk"] floating disable border normal 2
-for_window [class="Viewnior"] floating enable border normal 2
+#for_window [class="Transmission-gtk"] floating disable border normal 2
+#for_window [class="Viewnior"] floating enable border normal 2
 for_window [class="Ristretto"] floating enable border normal 2
 for_window [class="Gpicview"] floating enable border normal 2
 for_window [class="Gpick"] floating enable border normal 2
@@ -254,7 +254,7 @@ for_window [class="(?i)System-config-printer.py"] floating enable border normal
 for_window [class="Skype"] floating enable border normal
 for_window [class="Thus"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
-for_window [class="(?i)virtualbox"] floating enable border normal
+#for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="Xarchiver"] floating enable sticky enable border normal 2
 
@@ -316,8 +316,8 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id sh $HOME/.config/polybar/launch.sh
 #exec --no-startup-id xfce4-panel --disable-wm-check
 exec --no-startup-id compton -b --config ~/.config/compton-i3.conf
-exec --no-startup-id nitrogen --restore
-#exec --no-startup-id feh --bg-fill ~/Pictures/backgrounds/Dark.jpg
+#exec --no-startup-id nitrogen --restore
+exec_always --no-startup-id feh --bg-scale /home/lubomir/Pictures/backgrounds/52091678.jpg
 exec --no-startup-id start-pulseaudio-x11
 #exec --no-startup-id volumeicon
 exec --no-startup-id gnome-settings-daemon
@@ -330,8 +330,10 @@ exec --no-startup-id setxkbmap -layout "us,sk(qwerty),cz(qwerty)" -option grp:al
 #exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio -k
 #exec --no-startup-id ~/.scripts/alternating_layouts.py
-exec --no-startup-id redshift -l 49:18
-exec --no-startup-id sh ~/.scripts/conky-startup.sh
+exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
+#exec --no-startup-id pkill redshift && sleep 5; redshift &
+exec --no-startup-id pkill redshift && sleep 5; redshift -l 48.16:17.11 &
+#exec --no-startup-id sh ~/.scripts/conky-startup.sh
 #exec --no-startup-id sleep 25; sh ~/.scripts/update-output.sh
 #exec --no-startup-id xautolock -time 15 -locker 'sh /home/lubomir/.config/lock.sh'
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
