--- a/.config/i3/Canvas-theme/.i3status.conf
+++ b/.config/i3/Canvas-theme/.i3status.conf
@@ -9,7 +9,7 @@
 general {
         output_format = "i3bar"
         colors = true
-        color_good = "#9BE99B"
+        color_good = "#1EDC04"
         color_degraded = "#ccdc90"
         color_bad = "#e89393"
         markup = pango
@@ -51,39 +51,39 @@ wireless _first_ {
 
 ethernet enp2s0 {
         # if you use %speed, i3status requires the cap_net_admin capability
-        format_up = "<span background='#1C1C1C'>   Eth: %ip (%speed)  </span>"
-        format_down = "<span background='#1C1C1C'>  ∅Eth: down  </span>"
+        format_up = "<span background='#1C1C1C'>  Eth: %ip (%speed) </span>"
+        format_down = "<span background='#1C1C1C'> ∅Eth: down </span>"
 }
 
 cpu_usage {
-        format = "<span background='#1C1C1C'>  CPU: %usage  </span>"
+        format = "<span background='#1C1C1C'> CPU: %usage </span>"
 }
 
 cpu_temperature 0 {
-        format = "<span background='#1C1C1C' foreground='#FFD07C'>    %degrees°C  </span>"
+        format = "<span background='#1C1C1C' foreground='#FFD07C'>   %degrees°C </span>"
         path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input"
 }
 
 tztime local {
-        format = "<span background='#1C1C1C' foreground='#FFFFFF'>  %time  </span>"
-        format_time = "  %a %-d %b   %H:%M"
+        format = "<span background='#1C1C1C' foreground='#FFFFFF'> %time </span>"
+        format_time = " %a %-d %b  %H:%M"
 }
 
 load {
-        format = "<span background='#1C1C1C'>    %1min  </span>"
+        format = "<span background='#1C1C1C'>   %1min </span>"
 }
 
 disk "/" {
-        format = "<span background='#1C1C1C' foreground='#FFADAD'>    %avail  </span>"
+        format = "<span background='#1C1C1C' foreground='#FF8D8D'>   %avail </span>"
 }
 
 disk "/home" {
-        format = "<span background='#1C1C1C'>    %avail  </span>"
+        format = "<span background='#1C1C1C'>   %avail </span>"
 }
 
 volume master {
-   format = "<span background='#1C1C1C' foreground='#B3D1FF'>   %volume  </span>"
-   format_muted = "<span background='#1C1C1C' foreground='#3D4B4F'>   %volume  </span>"
+   format = "<span background='#1C1C1C' foreground='#B3D1FF'>  %volume </span>"
+   format_muted = "<span background='#1C1C1C' foreground='#3D4B4F'>  %volume </span>"
    device = "default"
    mixer = "Master"
    mixer_idx = 0
