--- a/.config/i3/Canvas-theme/config
+++ b/.config/i3/Canvas-theme/config
@@ -65,6 +65,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
+#bindsym $mod+Return exec --no-startup-id termite
 
 # kill focused window
 bindsym $mod+q kill
@@ -77,7 +78,8 @@ workspace_auto_back_and_forth yes
 bindsym $mod+Tab workspace back_and_forth
 
 # Start Applications
-bindsym $mod+F1 exec thunar
+#bindsym $mod+F1 exec thunar
+bindsym $mod+F1 exec nautilus --new-window
 bindsym $mod+F2 exec firefox
 bindsym $mod+Shift+F2 exec firefox -private-window
 #bindsym $mod+F2 exec --no-startup-id google-chrome-stable
@@ -251,11 +253,12 @@ for_window [class="SuperTuxKart"] floating disable border normal 2
 #for_window [class="OpenArena"] floating enable border pixel 2
 for_window [class="Imagewriter"] floating enable border normal
 for_window [class="vlc"] floating enable border normal 2
-for_window [class="smplayer"] floating enable;move position center border normal 2
+#for_window [class="smplayer"] floating enable;move position center border normal 2
 for_window [class="SimpleScreenRecorder"] floating enable border normal 2
-for_window [class="Transmission-gtk"] floating disable border pixel 2
-for_window [class="Viewnior"] floating enable border normal 2
+#for_window [class="Transmission-gtk"] floating disable border pixel 2
+#for_window [class="Viewnior"] floating enable border normal 2
 for_window [class="Ristretto"] floating enable border normal 2
+#for_window [class="stellarium"] floating enable border normal 2
 for_window [class="Gpicview"] floating enable border normal 2
 for_window [class="Gpick"] floating enable border normal 2
 for_window [class="feh"] floating enable border normal 2
@@ -275,7 +278,7 @@ for_window [class="(?i)System-config-printer.py"] floating enable border normal
 for_window [class="Skype"] floating enable border normal
 for_window [class="Thus"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
-for_window [class="(?i)virtualbox"] floating enable border normal
+#for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="Xarchiver"] floating enable sticky enable border normal 2
 
@@ -298,7 +301,7 @@ mode "$mode_system" {
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -342,11 +345,11 @@ bar {
         separator #545454
 
 #        focused_workspace  #5C5C5C #5C5C5C #D7DFFC
-        focused_workspace  #3D60E5 #3D60E5 #D7DFFC
+        focused_workspace  #5D7CF1 #3D60E5 #D7DFFC
         active_workspace   #333333 #5f676a #ffffff
 #        inactive_workspace #393939 #393939 #919AA8
-        inactive_workspace #2B3539 #2B3539 #919AA8
-        urgent_workspace   #ffb52a #ffb52a #192328
+        inactive_workspace #4D4D4D #3A3A3A #919AA8
+        urgent_workspace   #FFCA64 #ffb52a #222222
 
         # background #3250C5
         # statusline #FFFFFF #white
@@ -357,9 +360,9 @@ bar {
         # inactive_workspace #6381F2 #6381F2 #FFFFFF
         # urgent_workspace   #ffb52a #ffb52a #192328
     }
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
         i3bar_command i3bar
         position bottom
+#        height 22
 #        separator_symbol "//"
         workspace_buttons yes
 #        mode hide
@@ -367,17 +370,19 @@ bar {
 #        modifier $mod
 #        status_command i3status
         status_command i3pystatus -c ~/.config/i3/i3pystatus.py
+#        status_command i3blocks -c ~/.config/i3/i3blocks.conf
 #        status_command i3status-rs ~/.config/i3/status.toml
-        font pango:Iosevka, FontAwesome 10
-#        font pango:xos4 Terminess Powerline, FontAwesome 10.5
-#        font pango:Misc Fixed Bold, FontAwesome 10.5
+        font pango:FontAwesome, Iosevka bold 10
+#        font pango:Roboto, FontAwesome 10
+#        font pango:FontAwesome, xos4 Terminess Powerline Bold 10.5
+#        font pango:Misc Fixed, FontAwesome 10.5
 }
 
 # Autostart applications
-#exec_always --no-startup-id sh $HOME/.config/polybar/launch.sh
 exec --no-startup-id compton -b --config ~/.config/compton-i3.conf
-exec --no-startup-id nitrogen --restore
-#exec --no-startup-id feh --bg-scale feh --bg-scale /home/lubomir/.backgrounds/milky_way_stars-1920x1080.jpg
+#exec --no-startup-id nitrogen --restore
+exec_always --no-startup-id feh --bg-scale /home/lubomir/Pictures/backgrounds/canvas-i3.png
+#exec_always --no-startup-id feh --bg-fill /home/lubomir/Pictures/backgrounds/blue1.png
 exec --no-startup-id start-pulseaudio-x11
 #exec --no-startup-id volumeicon
 exec --no-startup-id gnome-settings-daemon
@@ -389,7 +394,9 @@ exec --no-startup-id gxkb
 exec --no-startup-id clipit
 #exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio -k
-exec --no-startup-id redshift -l 49:18
+exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
+#exec --no-startup-id redshift -l 48.16:17.11 &
+exec --no-startup-id pkill redshift && sleep 5; redshift -l 48.16:17.11 &
 exec_always --no-startup-id xrdb -load ~/.Xresources
 exec --no-startup-id killall conky & sh /home/lubomir/.scripts/conky-startup.sh
 #exec --no-startup-id xautolock -time 15 -locker 'sh /home/lubomir/.config/lock.sh'
@@ -414,7 +421,7 @@ gaps outer 0
 # Smart gaps (gaps used if only more than one container on the workspace)
 #smart_gaps on
 
-# Smart borders (draw borders around container only if it is not the only container on this workspace) 
+# Smart borders (draw borders around container only if it is not the only container on this workspace)
 # on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
 #smart_borders on
 
